Corrigindo links de paginação com ordenação